# prettytable

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  COPYING  MANIFEST.in  README  README.md  RELEASING.md  prettytable.py  prettytable_test.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tests.md  tox.ini
.github/: dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  labels.yml  lint.yml  release-drafter.yml  release.yml  require-pr-label.yml  test.yml
src/: conftest.py  prettytable.py  prettytable_test.py  setup.py
src/prettytable/: __init__.py  colortable.py  pretty.py  prettytable.py  test_pretty.py
tests/: test_colortable.py  test_prettytable.py
