[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "prettytable"
description = "A simple Python library for easily displaying tabular data in a visually appealing ASCII table format"
readme = "README.md"
license = {text = "BSD (3 clause)"}
maintainers = [{name ="Jazzband"}]
authors = [{name = "Luke Maurits", email = "luke@maurits.id.au"}]
requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Text Processing",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "wcwidth",
]
[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov",
  "pytest-lazy-fixture",
]
[project.urls]
Changelog = "https://github.com/jazzband/prettytable/releases"
Homepage = "https://github.com/jazzband/prettytable"
Source = "https://github.com/jazzband/prettytable"

[tool.hatch]
version.source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.isort]
profile = "black"
