[metadata]
name = prettytable
description = A simple Python library for easily displaying tabular data in a visually appealing ASCII table format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jazzband/prettytable
author = Luke Maurits
author_email = luke@maurits.id.au
maintainer = Jazzband
license = BSD (3 clause)
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Text Processing
project_urls =
    Source=https://github.com/jazzband/prettytable

[options]
packages = find:
install_requires =
    wcwidth
    importlib-metadata;python_version < '3.8'
python_requires = >=3.6
package_dir = =src
setup_requires =
    setuptools_scm

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    pytest-cov

[flake8]
extend-ignore = E203
max_line_length = 88

[tool:isort]
profile = black
